# de_niro

./: .gitignore  .rosinstall  .rosinstall.bak  LICENSE.txt  README.md
audio/: CMakeLists.txt  package.xml
audio/launch/: audio.launch  talkback.launch
audio/src/: audio_out_client.py  audio_out_server.py  audio_status_server.py  talkback.py
audio/srv/: AudioOut.srv  AudioStatus.srv
audio/test/: test_audio_out_server.py
baxter_tools/: CHANGELOG.rst  CMakeLists.txt  README.rst
baxter_tools/scripts/: calibrate_arm.py  camera_control.py  enable_robot.py  smoke_test.py  tare.py  tuck_arms.py  update_robot.py
brain/: CMakeLists.txt  package.xml
brain/launch/: brain.launch
brain/msg/: FetchParameters.msg
brain/scripts/: initialise_parameters.py  status_check_client.py
brain/src/: sm_mach.py  sm_main.py  sm_states.py
brain/test/: test_sm.py
deniro_description/: CMakeLists.txt  Readme.md  package.xml
deniro_description/launch/: deniro_rviz.launch
deniro_description/meshes/: pedestal.STL
deniro_description/rviz/: deniro.rviz
deniro_description/urdf/: baxter_base.urdf.xacro  deniro.xacro  left_end_effector.urdf.xacro  materials.xacro  mobile_base.xacro  pedestal.xacro  quickie.xacro  rethink_electric_gripper.xacro  right_end_effector.urdf.xacro
face_recog/: CMakeLists.txt  package.xml
face_recog/launch/: face_recog.launch
face_recog/msg/: Name_location.msg
face_recog/src/: face_pub.py  face_sub.py
face_recog/test/: test_face_pub.py
grasping/: CMakeLists.txt  package.xml
grasping/launch/: grasping.launch  grasping.launch~
grasping/src/: get_joint_angles.py  grasping_handler_client.py  grasping_handler_server.py  grasping_status_client.py  grasping_status_server.py  ik_service_client.py  offering_object_client.py  offering_object_server.py
grasping/srv/: GraspingHandler.srv  GraspingStatus.srv  OfferingObjectHandler.srv
grasping/test/: test_grasping_handler_server.py  test_grasping_status_server.py  test_offering_object_server.py
mapping_2d/: CMakeLists.txt  Readme.md  package.xml
mapping_2d/launch/: mapping_2d.launch
mapping_2d/rviz/: mapping.rviz
mapping_2d/src/: odometry_publisher.py
navigation/: CMakeLists.txt  package.xml
navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
navigation/launch/: nav_move_base.launch  nav_robot_config.launch  navigation.launch  quickie_xbox_navigation.launch
navigation/maps/: aeronautics_floor_3_v2_synth_barriers.pgm  aeronautics_floor_3_v2_synth_barriers.yaml  corridor_4.pgm  corridor_4.yaml  huxley_311_1.pgm  huxley_311_1.yaml  huxley_311_2.pgm  huxley_311_2.yaml  imperial_festival.pgm  imperial_festival.yaml  room2_with_zigzag_marker.pgm  room2_with_zigzag_marker.yaml  sunday1.pgm  sunday1_edit.pgm  sunday1_edit.yaml
navigation/rviz/: deniro_nav.rviz
navigation/src/: joy_publisher.py  movement_control.py  navigation_handler_client.py  navigation_handler_server.py  odometry_publisher_cmd_vel.py  vel_topic_converter.py
navigation/srv/: NavigationHandler.srv
navigation/test/: test_movement_handler_server.py
object_recognition/: CMakeLists.txt  coordinates_text_file.txt  package.xml
object_recognition/launch/: detection_drivers.launch  object_recognition.launch  object_recognition.launch~
object_recognition/src/: kinect_detected_markers.py  object_recognition_client.py  object_recognition_server.py  receive_instruction.py
object_recognition/srv/: ObjectRecognition.srv
object_recognition/test/: test_object_recognition_client.py  test_object_recognition_server.py
ros_comms/: ros_client.py  ros_pub.py  ros_server.py  ros_sub.py
speech_recog/: CMakeLists.txt  package.xml
speech_recog/launch/: speech_recog.launch
speech_recog/src/: configs.py  fetch.fsg  fetch.gram  speech_client.py  speech_server.py
speech_recog/srv/: SpeechRecognition.srv
(+11 files in other folders)
