<?xml version="1.0"?>
<package format="2">
  <name>audio</name>
  <version>0.0.0</version>
  <description>The audio package</description>

  <maintainer email="cwp2017@ic.ac.uk">Clara Pouletty</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rosbridge_server</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
