<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <maintainer email="jl1809@imperial.ac.uk">John Lingi</maintainer>

  <license>MIT</license>


<url type="website">https://www.imperial.ac.uk/robot-intelligence/</url>


  <author email="jl1809@imperial.ac.uk">John Lingi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>


</package>
